# Audio

./: .clang-format  Audio.sln  Audio.vcxproj  Audio.vcxproj.filters  CMakeLists.txt  CMakePresets.json  GenerateProjectFiles.bat  OpenInCMake.bat  README.md
docs/: Audio Library.pptx
example/: CMakeLists.txt  DebugSettings.vcxproj.user.in  MarioCoin.cpp  MarioCoin.hpp  example.vcxproj  example.vcxproj.filters  main.cpp  narrator.flac  narrator.xmp  script.txt
inc/Audio/: Config.hpp  Device.hpp  Listener.hpp  Sound.hpp  Vector.hpp  Waveform.hpp
src/: Device.cpp  Listener.cpp  ListenerImpl.cpp  ListenerImpl.hpp  Sound.cpp  SoundImpl.cpp  SoundImpl.hpp  Waveform.cpp  WaveformImpl.cpp  WaveformImpl.hpp  miniaudio.c
